completed fixes ? I hope

--- a/contact.html
+++ b/contact.html
@@ -9,39 +9,35 @@
 </head>
 <body>
 	<div class="main-container">
-			<div class="cont-box"><!--Start cont-box-->  
-			<div class="contact-box-in"><!--Start contact-box-in-->
+		<div class="cont-box">  
+			<div class="contact-box-in">
 				<div class="title">
 					<button id="contact-back" onclick="window.location.assign('./index.html')">Back</button>
 					<div id="contact-title"><h3>Contact me</h3></div>
 				</div>
-			  	<div class="contact-buttons"><!--Start contact-buttons-->
+				<div class="contact-buttons">
 					<button class="c-button"><a href="mailto:maddarr@bellsouth.net"><h4>e-mail</h4></a></button>
 					<button class="c-button" ><a href="https://www.facebook.com/Maddarr"><h4>Facebook</h4></a></button>
 					<button class="c-button" ><a href="https://www.instagram.com/a_fat_aussie_abroad"><h4>Instagram</h4></a></button>
-			  	</div><!--End contact-buttons-->
-			  	<div class="contact-about"><!--Start contact-about-->
-					
-				  <div class="contact-about-heading">
-					<h3>Hi, my name is Terry</h3>
-				  </div>
-				  <div class="contact-about-text">
-					<p>I'm originally from Australia but after meeting and marrying a great American Lady, I migrated to the USA in 2004. Since then I've worked in many fields and learned a great deal more about the world and different ways of life. I enjoy seeing new and different parts of this country together with my wife and children.</p>
-					<br />
-					<p>Back in 2018 I began my coding path by looking into programming in the Swift language, by following books and online tutorials. This went on for a while however because of not wanting to publish any work to the apple app store and not being able to share the things I did with family or friends, I soon gave up... For a while.</p> 
-					<br />
-					<p>Roughly a year later I picked it back up again and began playing around with Swift and Xcode once more to refresh my skills. Then this last year I decided to take it further with the coding and I enrolled in an online training program called <a href="http://www.codecademy.com">Codecademy</a>. I began by learning the Python language and how to use the Command Line to help utilize the language. Once I had finished the Python3 certification, I began to look into what other courses were available.</p>
-					<br />
-					<p>I found one that would send me down the path I'm on now, the Front End Engineer Career Path. Within this career path I have now achieved certifications in HTML, Basic and Intermediate CSS and Basic Java Script. And I look forward to what this line of study can produce in the future.
-					</p>   
-				  </div>
-
-			  </div><!--End contact-about-->
-			</div><!--End contact-box-in-->
-			<div class="cont-box-panel"><!--Start cont-box-panel-->
-			  <p>Contact me</p> 
-			</div><!--End cont-box-panel-->
-			</div><!--End cont-box-->
+			  	</div>
+			  	<div class="contact-about">
+					<div class="contact-about-heading">
+						<h3>Hi, my name is Terry</h3>
+				  	</div>
+				  	<div class="contact-about-text">
+						<p>I'm originally from Australia but after meeting and marrying a great American Lady, I migrated to the USA in 2004. Since then I've worked in many fields and learned a great deal more about the world and different ways of life. I enjoy seeing new and different parts of this country together with my wife and children.</p>
+						<br />
+						<p>Back in 2018 I began my coding path by looking into programming in the Swift language, by following books and online tutorials. This went on for a while however because of not wanting to publish any work to the apple app store and not being able to share the things I did with family or friends, I soon gave up... For a while.</p> 
+						<br />
+						<p>Roughly a year later I picked it back up again and began playing around with Swift and Xcode once more to refresh my skills. Then this last year I decided to take it further with the coding and I enrolled in an online training program called <a href="http://www.codecademy.com">Codecademy</a>. I began by learning the Python language and how to use the Command Line to help utilize the language. Once I had finished the Python3 certification, I began to look into what other courses were available.</p>
+						<br />
+						<p>I found one that would send me down the path I'm on now, the Front End Engineer Career Path. Within this career path I have now achieved certifications in HTML, Basic and Intermediate CSS and Basic Java Script. And I look forward to what this line of study can produce in the future.
+						</p>   
+				  	</div>
+				</div>
+			</div>
+			<div class="cont-box-panel"></div>
+		</div>
 	</div>	
 </body>
 </html>
