--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
       <link href="./resources/css/index.css" type='text/css' rel="stylesheet">    
     </head>
     <body>
-      <div class="page-container"><!--Start page-container-->
-          <div class="landing-box-front"><!--Startlanding-box-front-->
-
-            <div class="title"><h1>TERRY BAILLIE</h1></div>
-
-              <div class="landing-content-box"><!--Start landing-content-box-->
+      <div class="page-container">
+        <div class="landing-box-front">
+          <div class="title"><h1>TERRY BAILLIE</h1></div>
+            <div class="landing-content-box">
               <div class="landing-content-inside">
                 <div class="landing-content-top">
                   <div id="landing-title">
@@ -24,40 +22,29 @@
                     <img src="./resources/images/me2.png">
                   </div>
                 </div>
-
-                  <div class="landing-content-text"><!--Start landing-content-text-->
-                    
-                    <p>I am studying to become a Front End Engineer for Web Development. The following Webpages are a creation devised from the training so far, a culmination of my life's experiences and work histoy.</p>
-                    <p>Please feel free to look around.</p> 
-                  </div><!--End landing-content-text-->
-                  <nav class="landing-nav-box"><!--Start landing-nav-box-->
-                    <button class="landing-button-box" onclick="window.location.assign('./employment.html')" >
-                      <p>Employment</p>
-                    </button>
-                    
-                    <button class="landing-button-box" onclick="window.location.assign('./education.html')" >
-                      <p>Education</p>
-                    </button>
-
-                    <button class="landing-button-box" onclick="window.location.assign('./portfolio.html')">
-                      <p>Portfolio</p>
-                    </button>
-
-                    <button class="landing-button-box" onclick="window.location.assign('./contact.html')">
-                      <p>Contact me</p>
-                    </button>
-                  </nav><!--End landing-nav-box-->
-                </div><!--End landing-content-inside-->
+                <div class="landing-content-text">
+                  <p>I am studying to become a Front End Engineer for Web Development. The following Webpages are a creation devised from the training so far, a culmination of my life's experiences and work histoy.</p>
+                  <p>Please feel free to look around.</p> 
+                  </div>
+                <nav class="landing-nav-box">
+                  <button class="landing-button-box" onclick="window.location.assign('./employment.html')" ><p>Employment</p></button>
+                  <button class="landing-button-box" onclick="window.location.assign('./education.html')" ><p>Education</p>
+                  </button>
+                  <button class="landing-button-box" onclick="window.location.assign('./portfolio.html')"><p>Portfolio</p>
+                  </button>
+                  <button class="landing-button-box" onclick="window.location.assign('./contact.html')"><p>Contact me</p>
+                  </button>
+                </nav>
+              </div>
               <div class="landing-content-panel">
-                <div class="clock-box"><!--Start clock-box-->  
+                <div class="clock-box">
                   <div class="clock">HH : MM</div>
                   <div class="date">DD - MM -YYYY</div>
-                </div><!--End clock-box-->
-
-              </div><!--End landing-content-panel-->
-            </div><!--End landing-content-box-->
-        </div><!--End landing-box-front-->
-      </div><!--End page-container-->
-    <script src="./resources/Java/clock.js"></script>
-   </body>
- </html>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+      <script src="./resources/Java/clock.js"></script>
+    </body>
+  </html>
