--- a/portfolio.html
+++ b/portfolio.html
@@ -9,55 +9,47 @@
 </head>
 <body>
 	<div class="main-container">
-		<div class="port-content-box"><!--Start port-content-box-->
-				<div class="port-content-inside"><!--Start port-content-inside-->
-  
-				  <div class="port-banner-box"><!--Start port-banner-box-->
-					<div class="port-banner-inside"><!--Start port-banner-inside-->
-					  <button class="port-back" onclick="window.location.assign('./index.html')" >Back</button>
-					  <div class="port-heading"><h3>Portfolio of coding</h3></div>
-					</div><!--End port-banner-inside-->
-				  </div><!--End port-banner-box-->
-  
-				  <div class="port-bar-top"><!--Start port-bar-top-->
+		<div class="port-content-box">
+			<div class="port-content-inside">
+  				<div class="port-banner-box">
+					<div class="port-banner-inside">
+					  	<button class="port-back" onclick="window.location.assign('./index.html')" >Back</button>
+					  	<div class="port-heading"><h3>Portfolio of coding</h3></div>
+					</div>
+				</div>
+  				<div class="port-bar-top">
 					<div class="bar-top-1"></div>
 					<div class="bar-top-2"></div>
 					<div class="bar-top-3"></div>
 					<div class="bar-top-4"></div>
 					<div class="bar-top-5"></div>
-				  </div><!--End cert-bar-top-->
-  
-				  <div class="port-content-box-in"><!--Start port-content-box-in-->
-					<div class="port-content-text-in"><!--Start port-content-text-in-->
-					  <p>Below are links to the different websites and pages I have developed since I began my coding journey with <a href="https://codecademy.com">Codecademy</a> . They have been written using HTML, CSS and Java Script.</p> 
-					  <br />
-					  <p>Each link will take you to either the actual publication of the site or to a different page on this one, as they are still in development on my end. I hope you enjoy </p>
-					</div><!--End port-contant-text-in-->
-					<div class="port-content-panel1"><!--Start port-content-panel-->
-					   <p>Portfolio 2022</p>  
-					</div><!--End port-content-panel1-->
-				  </div><!--End port-content-box-in-->
-				  <div class="port-content-box-bottom"><!--Start port-content-box-bottom-->
-					<div class="port-content-text-bottom"><!--Start port-content-text-bottom-->
-					  <div class="port-buttons">
-						  	
+				</div>
+  				<div class="port-content-box-in">
+					<div class="port-content-text-in">
+					  	<p>Below are links to the different websites and pages I have developed since I began my coding journey with <a href="https://codecademy.com">Codecademy</a> . They have been written using HTML, CSS and Java Script.</p> 
+					  	<br />
+					  	<p>Each link will take you to either the actual publication of the site or to a different page on this one, as they are still in development on my end. I hope you enjoy </p>
+					</div>	
+				<div class="port-content-panel1">
+					<p>Portfolio 2022</p>  
+				</div>
+				</div>
+				<div class="port-content-box-bottom">
+					<div class="port-content-text-bottom">
+					  	<div class="port-buttons">
 						  	<button class="pfb"><a href="https://evesunflower.com"><h4>evesunflower.com</h4></a></button>
 							<h2>The above link is to my first website that I designed and developed. It is my wife's Floral  Portfolio.</h2>
-
 							<button class="pfb"><a href="./history.html"><h4>E & D.H.S.</h4></a></button>
 							<h2>This is a Website I am working on developing for The Erica and Districts Historical Society in Victoria, Australia for my mom who is the societies secretary.</h2>
-
-						  	<button class="pfb"><a href="./Quiz/index.html"><h4>Minigames</h4></a></button>
+							<button class="pfb"><a href="./Quiz/index.html"><h4>Minigames</h4></a></button>
 							<h2>The above link is to small game website I have been playing around with and developing, it is still under productoin but it works. I am now working on its styles, UI and the internal content.</h2>
-
-					  </div>
-					</div><!--End port-contant-text-bottom-->
-					<div class="port-content-panel2"></div>
-				  </div><!--End port-content-box-bottom--> 
-			   </div><!--End port-content-inside--> 
+						</div>
+					</div>
+				<div class="port-content-panel2"></div>
+				</div>
+			</div>
 				<div class="port-content-panel"></div>
-			  </div><!--End port-content-box-->  
-		 
+		</div> 
 	</div>	
 </body>
 </html>
