--- a/education.html
+++ b/education.html
@@ -8,41 +8,36 @@
 	<link rel="stylesheet" href="./resources/css/education.css">
 </head>
 <body>
-	<div class="main-container">
-		<div class="certification-box">
-			  <div class="cert-content-box">
-				<div class="cert-content-inside"><!--Start cert-content-inside-->
-					<div class="title">
-						<button id="cert-back" onclick="window.location.assign('./index.html')" >Back</button>
-						<div id="cert-title"><h3>Education & Certifications</h3></div>
-					</div>
+	<div class="certification-box">
+		<div class="cert-content-box">
+			<div class="cert-content-inside">
+				<div class="title">
+					<button id="cert-back" onclick="window.location.assign('./index.html')" >Back</button>
+					<div id="cert-title"><h3>Education & Certifications</h3></div>
+				</div>
 <!--//////////////////////////////////////////////////////////////////////////////////////////-->
-					<div class="cert-button-box">
-						<div class="cert-button-in">
-							<div class="buttons"><!--Startbuttons-->
-								<button class="c-b-b" onclick="CC1()" id="CC"><h4>Codecademy</h4></button>
-								<button class="c-b-b" onclick="QC1()" id="QC"><h4>Quality Control</h4></button>
-								<button class="c-b-b" onclick="BM1()" id="BM"><h4>Boilermaker</h4></button>
-							  </div>
-							</div>
-						<div class="cert-content-panel1"></div>
-				  	</div>
+				<div class="cert-button-box">
+					<div class="cert-button-in">
+						<div class="buttons">
+							<button class="c-b-b" onclick="CC1()" id="CC"><h4>Codecademy</h4></button>
+							<button class="c-b-b" onclick="QC1()" id="QC"><h4>Quality Control</h4></button>
+							<button class="c-b-b" onclick="BM1()" id="BM"><h4>Boilermaker</h4></button>
+						</div>
+					</div>
+					<div class="cert-content-panel1"></div>
+				</div>
 <!--///////////////////////////////////////////////////////////////////////////////////////-->
-				  <div class="cert-content-box-bottom"><!--Start cert-content-box-bottom-->
-					<div class="cert-content-text-bottom"><!--Start cert-content-text-bottom-->
+				<div class="cert-content-box-bottom">
+					<div class="cert-content-text-bottom">
 						<div id="certifications">
 								<img id="image1" src="./resources/images/educat.png"/>
 						</div>
-					  
-					</div><!--End cert-contant-text-bottom-->
+					</div>
 					<div class="cert-content-panel2"></div>
-				  </div><!--End cert-content-box-bottom--> 
-			   </div><!--End cert-content-inside--> 
+				</div>
+			</div>
 				<div class="cert-content-panel"></div>
-			  </div><!--End cert-content-box-->
-			  
-		  </div><!--End certifications-box-->
-
+		</div>
 	</div>
 	<script src="./resources/Java/education.js"></script>
 </body>
