education fixed phone

--- a/education.html
+++ b/education.html
@@ -19,9 +19,9 @@
 				<div class="cert-button-box">
 					<div class="cert-button-in">
 						<div class="buttons">
-							<button class="c-b-b" onclick="CC1()" id="CC"><h4>Codecademy</h4></button>
-							<button class="c-b-b" onclick="QC1()" id="QC"><h4>Quality Control</h4></button>
-							<button class="c-b-b" onclick="BM1()" id="BM"><h4>Boilermaker</h4></button>
+							<button class="c-b-b" onclick="CC1()" id="CC">Code<h4>Codecademy</h4></button>
+							<button class="c-b-b" onclick="QC1()" id="QC">QC<h4>Quality Control</h4></button>
+							<button class="c-b-b" onclick="BM1()" id="BM">BM<h4>Boilermaker</h4></button>
 						</div>
 					</div>
 					<div class="cert-content-panel1"></div>
