--- a/employment.html
+++ b/employment.html
@@ -17,17 +17,18 @@
 			  	</div>
 				<div class="employment-content-box">
 					<div id="button-boxes">
-						<button class="e-b-b" onclick="one1()" id="job1"><h4>U.S.P.S.</h4></button>
+
+						<button class="e-b-b" onclick="one1()" id="job1">USPS<h4>U.S.P.S.</h4></button>
 						<h5>RCA (Rural Carrier Assistant), Jan-2018 to Current</h5>
-				  		<button class="e-b-b" onclick="one2()" id="job2"><h4>Lobbs Hort</h4></button>
+				  		<button class="e-b-b" onclick="one2()" id="job2">Lobbs<h4>Lobbs Hort</h4></button>
 					 	 <h5>Horticultural Tech,  Feb-2017 to Jan-2018</h5>
-  						<button class="e-b-b" onclick="one3()" id="job3"><h4>C.M.I</h4></button>
+  						<button class="e-b-b" onclick="one3()" id="job3">CMI<h4>C.M.I</h4></button>
 					  	<h5>Dispatch Supervisor, Jan-2015 to Mar-2016</h5>
-				  		<button class="e-b-b" onclick="one4()" id="job4"><h4>F.S.L.</h4></button>
+				  		<button class="e-b-b" onclick="one4()" id="job4">FSL<h4>F.S.L.</h4></button>
 					  	<h5>Q.C Supervisor, Nov-2013 to Jan-2015 & Mar-2016 to Feb-2017</h5>
-  						<button class="e-b-b" onclick="one5()" id="job5"><h4>Lowes</h4></button>
+  						<button class="e-b-b" onclick="one5()" id="job5">Lowes<h4>Lowes</h4></button>
 					  	<h5>Department Supervisor(Garden), Jun-2011 to Nov-2013</h5>
-  						<button class="e-b-b" onclick="one6()" id="job6"><h4>Home Depot</h4></button>
+  						<button class="e-b-b" onclick="one6()" id="job6">THD<h4>Home Depot</h4></button>
 					  	<h5>ASM (Assistant Store Manager), Nov-2004 to Jun-2011</h5>
 					</div>
 					<div id="employment-content">
