contact fixed for ph

--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
 					<div id="contact-title"><h3>Contact me</h3></div>
 				</div>
 				<div class="contact-buttons">
-					<button class="c-button"><a href="mailto:maddarr@bellsouth.net"><h4>e-mail</h4></a></button>
-					<button class="c-button" ><a href="https://www.facebook.com/Maddarr"><h4>Facebook</h4></a></button>
-					<button class="c-button" ><a href="https://www.instagram.com/a_fat_aussie_abroad"><h4>Instagram</h4></a></button>
+					<button class="c-button">email<a href="mailto:maddarr@bellsouth.net"><h4>e-mail</h4></a></button>
+					<button class="c-button" >Fb<a href="https://www.facebook.com/Maddarr"><h4>Facebook</h4></a></button>
+					<button class="c-button" >Insta<a href="https://www.instagram.com/a_fat_aussie_abroad"><h4>Instagram</h4></a></button>
 			  	</div>
 			  	<div class="contact-about">
 					<div class="contact-about-heading">
