--- a/Quiz/gameOne.html
+++ b/Quiz/gameOne.html
@@ -62,6 +62,7 @@
 				</div>
 				<div id="instruct">
 					<h3 id="instruction">Click a glyph from each of the above five columns to attempt to dial the correct address sequence for the Planet below. You have 5 chances per column to get it correct. The more correct the higher the score, BUT an incorrect choice will lessen your score.   GOOD LUCK </h3>
+					<h4>Click a Glyph, you get 5 turns of each column</h4>
 				</div>
 				<div id="goto">
 					<p>Destination Planet Address</p>
