fixed other mini games for phone

--- a/Quiz/gameOne.html
+++ b/Quiz/gameOne.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<div class="container">
+		<div class="inner-container">
 		<div class="title">
 			<h1>Stargate Mini Game</h1>
 		</div>
@@ -83,6 +84,7 @@
 			</div>
 			
 		</div>
+	</div>
 	</div>
 	<script src="./gameOne.js"></script>
 	<script src="./highScores.js"></script>	
