--- a/Quiz/gameTwo.html
+++ b/Quiz/gameTwo.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<div class="container">
+		<div class="inner-container">
 		<div class="title">
 			<a id="trek"></a>
 			<h1 id="star">Star Trek mini game</h1>
@@ -93,6 +94,7 @@
 		<div id="ships-bottom">
 			<a id="P13">By Terry Baillie</a>
 		</div>
+	</div>
 	</div>
 <script src="./gameTwo.js"></script>
 <script src="./highScores.js"></script>		
