--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -10,15 +10,16 @@
 <body>
 	
 	<div class="container">
+		<div class="inner-container">
 		<div class="title">
 			<h1>Maddarr's mini games</h1>
 		</div>
 		<div id="home" class="flex-center flex-column">
-			<div id="like_button_container"></div>
 			<a href="./gameOne.html" class="btn">Stargate MiniGame</a>
 			<a href="./gameTwo.html" class="btn">Star Trek MiniGame</a>
 			<a href="./highScores.html" class="btn">HighScores</a>
 		</div>
+	</div>
 	</div>
 </body>
 </html>
