--- a/Quiz/highScores.html
+++ b/Quiz/highScores.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<div class="container">
+		<div class="inner-containere">
 		<div id="end" class="flex-center flex-column">
 			<div class="scoreBox">
 				<div id="gameOneMGS">
@@ -32,6 +33,7 @@
 			<a class="btn" href="./gameTwo.html">Replay Star Trek</a>
 			<a class="btn" href="./index.html">Go Home</a>
 		</div>
+	</div>
 	</div>
 	<script src="./highScores.js"></script>
 </body>
